Added starter code for bar Charts

--- a/source/index.html
+++ b/source/index.html
@@ -15,8 +15,8 @@
 
   <body>
 
-    <!-- Application target point -->
-    <div id="app-target"></div>
+    <!-- SVG Canvas -->
+    <svg id="canvas"/>
 
     <!-- Application JavaScript -->
     <script type="text/javascript" src="javascript/app.js"></script>
