--- a/source/index.html
+++ b/source/index.html
@@ -19,7 +19,7 @@
     <svg id="canvas"/>
 
     <!-- Application JavaScript -->
-    <script type="text/javascript" src="javascript/app.js"></script>
+    <script type="text/javascript" src="javascript/BarChart.js"></script>
 
   </body>
 </html>
