--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <!-- Application Stylesheet -->
-    <link rel="stylesheet" href="stylesheets/stylesheet.css"/>
+    <link rel="stylesheet" href="stylesheets/barchart.css"/>
 
   </head>
 
