--- a/source/barchart.html
+++ b/source/barchart.html
@@ -3,7 +3,7 @@
 <html>
   <head>
 
-    <title>D3 Bar Chart</title>
+    <title>D3 Bar Chart - US Gross Domestic Product</title>
 
     <!-- Responsive Viewport -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
