Added files for scatterplot graph, updated gulpfile, added scatterplot to index.html

--- a/source/index.html
+++ b/source/index.html
@@ -13,6 +13,8 @@
   <body>
 
     <a href="barchart.html">Bar Chart</a>
+    <a href="scatterplot.html">Scatterplot Graph</a>
+
 
   </body>
 </html>
