Started work on info popup

--- a/source/scatterplot.html
+++ b/source/scatterplot.html
@@ -18,6 +18,9 @@
     <!-- SVG Canvas -->
     <svg id="canvas"/>
 
+    <!-- Tooltip -->
+    <div class="tooltip"></div>
+
     <!-- Application JavaScript -->
     <script type="text/javascript" src="javascript/Scatterplot.js"></script>
 
