Updated index.html and restyled

--- a/source/index.html
+++ b/source/index.html
@@ -8,12 +8,27 @@
     <!-- Responsive Viewport -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+    <!-- Application Stylesheet -->
+    <link rel="stylesheet" href="stylesheets/stylesheet.css"/>
+
   </head>
 
   <body>
 
-    <a href="barchart.html">Bar Chart</a>
-    <a href="scatterplot.html">Scatterplot Graph</a>
+    <div id="chart-list">
+
+      <div class="section-title">Charts</div>
+
+      <div class="container-chart">
+        <a href="barchart.html">Bar Chart</a>
+      </div>
+      
+      <div class="container-chart">
+        <a href="scatterplot.html">Scatterplot Graph</a>
+      </div>
+    </div>
+
+
 
 
   </body>
