started implementation of heatmap chart

--- a/source/index.html
+++ b/source/index.html
@@ -22,14 +22,15 @@
       <div class="container-chart">
         <a href="barchart.html">Bar Chart</a>
       </div>
-      
+
       <div class="container-chart">
         <a href="scatterplot.html">Scatterplot Graph</a>
       </div>
+
+      <div class="container-chart">
+        <a href="heatmap.html">Heat Map Chart</a>
+      </div>
     </div>
-
-
-
 
   </body>
 </html>
