Added files for force-directed graph, updated gulpfile, added force graph to index.html

--- a/source/index.html
+++ b/source/index.html
@@ -30,6 +30,10 @@
       <div class="container-chart">
         <a href="heatmap.html">Heat Map Chart</a>
       </div>
+
+      <div class="container-chart">
+        <a href="forcegraph.html">Force-Directed Graph</a>
+      </div>
     </div>
 
   </body>
