Added files for geo map chart

--- a/source/index.html
+++ b/source/index.html
@@ -34,6 +34,10 @@
       <div class="container-chart">
         <a href="forcegraph.html">Force-Directed Graph</a>
       </div>
+
+      <div class="container-chart">
+        <a href="geomap.html">Geographical Map</a>
+      </div>
     </div>
 
   </body>
