Changed titles, minor style changes

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 
     <div id="chart-list">
 
-      <div class="section-title">Charts</div>
+      <div class="section-title"><h1>D3 Charts</h1></div>
 
       <div class="container-chart">
         <a href="barchart.html">Bar Chart</a>
