--- a/source/scatterplot.html
+++ b/source/scatterplot.html
@@ -3,7 +3,7 @@
 <html>
   <head>
 
-    <title>D3 Scatterplot Graph - Doping in Professional Bicycle Racing</title>
+    <title>Doping in Professional Bicycle Racing</title>
 
     <!-- Responsive Viewport -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
