--- a/source/geomap.html
+++ b/source/geomap.html
@@ -3,7 +3,7 @@
 <html>
   <head>
 
-    <title>D3 Geographical Map</title>
+    <title>D3 Meteorite Impact Map</title>
 
     <!-- Responsive Viewport -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
