--- a/source/heatmap.html
+++ b/source/heatmap.html
@@ -3,7 +3,7 @@
 <html>
   <head>
 
-    <title>D3 Heat Map Chart</title>
+    <title>Monthly Global Land-Surface Temperature</title>
 
     <!-- Responsive Viewport -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
